--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,21 +1,34 @@
 name: CI
-on: 
+on:
   pull_request:
     branches: [develop]
+  push:
+    branches:
+      - "develop"
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Use NodeJS
-      uses: actions/setup-node@v1
-      with:
-        node-version: "12.x"
-        #similar cu npm install dar e mai facil pt ci
-    - run: npm ci
-    - run: npm run format:check
-    - run: npm test -- --coverage
-      env:
-        #sa nu avem terminal interactiv
-        CI: true 
+      - uses: actions/checkout@v2
+      - name: Use NodeJS
+        uses: actions/setup-node@v1
+        with:
+          node-version: "12.x"
+          #similar cu npm install dar e mai facil pt ci
+      - run: npm ci
+      - run: npm run format:check
+      - run: npm test -- --coverage
+        env:
+          #sa nu avem terminal interactiv
+          CI: true
+      - name: Build Project
+        if: github.event_name == 'push'
+        run: npm run build
+      - name: Deploy to Staging
+        if: github.event_name == 'push'
+        run: npx surge --project ./build --domain mgactions.surge.sh
+        env:
+          SURGE_LOGIN: ${{ secrets.SURGE_LOGIN}}
+          #generat local "surge token"
+          SURGE_TOKEN: ${{ secrets.SURGE_TOKEN}}
