--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,6 +43,7 @@ jobs:
         if: github.event_name == 'push'
         run: npm run build
       - name: Upload build folder
+        if: github.event_name == 'push'
         uses: actions/upload-artifacts@v2
         with:
           name: build
