--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,8 +51,8 @@ jobs:
           path: build
       # - uses: actions/download-artifact folosim sa downloadam artefact-ul
       - name: Create a Release
-        # cream release cand facem push pe master
-        if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+        # cream release cand facem push pe main
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         run: npx semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
