--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,6 +50,11 @@ jobs:
           name: build
           path: build
       # - uses: actions/download-artifact folosim sa downloadam artefact-ul
+      - name: ZIP Assets
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        run: |
+          zip -r build.zip ./build
+          zip -r coverage.zip ./coverage
       - name: Create a Release
         # cream release cand facem push pe main
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
