--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,11 +1,11 @@
 name: CI
 on:
   pull_request:
-    branches: [develop, master]
+    branches: [develop, main]
   push:
     branches:
       - "develop"
-      - "master"
+      - "main"
 
 jobs:
   build:
